# ai-loan-assistance

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  code-quality.yml  security.yml
alembic/: env.py
alembic/versions/: 001_create_initial_schema.py
app/: config.py  main.py
app/agents/: __init__.py  credit_agent.py  decision_agent.py  document_agent.py  orchestrator.py  policy_agent.py
app/api/middleware/: __init__.py  correlation.py  logging.py
app/api/routes/: __init__.py  health.py  loans.py  metrics.py
app/db/: __init__.py  models.py  seed.py  session.py  unit_of_work.py
app/db/migrations/: init.sql
app/db/repositories/: __init__.py  audit.py  base.py  customer.py  loan.py  policy.py
app/evaluation/: __init__.py  evaluator.py
app/guardrails/: __init__.py  validators.py
app/infrastructure/: __init__.py  di.py  openapi.py  redis.py  vector_db.py
app/mcp/: __init__.py  tools.py
app/observability/: __init__.py  logging.py  telemetry.py
app/rag/: __init__.py  embeddings.py  ingestion.py  retriever.py
app/schemas/: __init__.py  loan.py
docker/: otel-collector-config.yaml  redis-config.conf
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
tests/: conftest.py
tests/unit/: test_api_health.py  test_config.py  test_correlation_id.py  test_embeddings.py  test_evaluation.py  test_guardrails.py  test_infrastructure.py  test_mcp_tools.py  test_metrics_endpoint.py
