[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-loan-assistance"
version = "0.1.0"
description = "Enterprise AI Loan Decision Assistant – HPE Interview Demo"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Configuration
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",

    # LLM / Agents
    "langchain>=0.2.6",
    "langchain-openai>=0.1.14",
    "langchain-community>=0.2.6",
    "langgraph>=0.1.19",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.3.2",

    # Observability
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",

    # Logging
    "structlog>=24.2.0",

    # Utilities
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "python-jose[cryptography]>=3.3.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "types-python-jose>=3.3.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing -v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
