[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-loan-assistance"
version = "0.1.0"
description = "Enterprise AI Loan Decision Assistant – HPE Interview Demo"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
python-multipart = "^0.0.9"

# Configuration
pydantic = { version = "^2.7.0", extras = ["email"] }
pydantic-settings = "^2.3.0"

# LLM / Agents
langchain = "^0.2.6"
langchain-openai = "^0.1.14"
langchain-community = "^0.2.6"
langgraph = "^0.1.19"

# Database
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pgvector = "^0.3.2"

# Cache
redis = "^5.0.0"

# Observability
opentelemetry-sdk = "^1.25.0"
opentelemetry-api = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-instrumentation-sqlalchemy = "^0.46b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.25.0"

# Logging
structlog = "^24.2.0"

# Utilities
httpx = "^0.27.0"
tenacity = "^8.3.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
tiktoken = "^0.7.0"
setuptools = "^80.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
anyio = "^4.4.0"
ruff = "^0.4.8"
black = "^24.3.0"
mypy = "^1.10.0"
types-python-jose = "^3.3.4"
pre-commit = "^3.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing -v"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
